Update and rename index.html.txt to index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div class="container">
         <h1>Generador de Enlace para el Contador</h1>
         <form id="generator-form">
-            <label>Fecha de inicio:<br>
-                <input type="date" id="fecha">
+            <label>Fecha de inicio: 23/01/2025<br>
+                <input type="date" id="fecha"> 23/05/2025
             </label>
             <label>Título:<br>
                 <input type="text" id="titulo" placeholder="Estamos juntos">
@@ -22,10 +22,10 @@
                 <textarea id="mensajeCarta" rows="3" placeholder="Mensaje especial"></textarea>
             </label>
             <label>URL de la foto:<br>
-                <input type="text" id="fotoURL" placeholder="Img/foto.jpg">
+                <input type="text" id="fotoURL" placeholder="B8D6D643-46C1-4D44-90FE-9EB566D371BE.JPEG">
             </label>
             <label>URL de la música:<br>
-                <input type="text" id="musicaURL" placeholder="Music/tu-cancion.mp3">
+                <input type="text" id="musicaURL" placeholder="Los Primos MX – Mi Bello Ángel.mp3">
             </label>
             <button type="submit">Generar enlace</button>
         </form>
